--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@johmun/vue-tags-input": "^2.1.0",
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
     "vue-nprogress": "^0.1.5",
     "vue-router": "^3.1.3",
+    "vue2-dropzone": "^3.6.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
