--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "@johmun/vue-tags-input": "^2.1.0",
+    "@popperjs/core": "^2.1.1",
     "core-js": "^3.3.2",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-nprogress": "^0.1.5",
     "vue-router": "^3.1.3",
     "vue2-dropzone": "^3.6.0",
@@ -25,8 +26,8 @@
     "@vue/eslint-config-standard": "^4.0.0",
     "animate.css": "^3.7.2",
     "babel-eslint": "^10.0.3",
-    "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.4",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.8.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "font-awesome": "^4.7.0",
@@ -34,7 +35,8 @@
     "sass": "^1.23.1",
     "sass-loader": "^8.0.0",
     "stylus": "^0.54.7",
-    "vue-template-compiler": "^2.6.10"
+    "vue-loader": "^15.9.1",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
