--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@johmun/vue-tags-input": "^2.1.0",
     "@popperjs/core": "^2.1.1",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
@@ -31,11 +30,11 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "font-awesome": "^4.7.0",
-    "gentelella": "^1.4.0",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "stylus": "^0.54.7",
     "vue-loader": "^15.9.1",
+    "vue-multiselect": "^2.1.6",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
