--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "vue-nprogress": "^0.1.5",
     "vue-router": "^3.1.6",
     "vue2-dropzone": "^3.6.0",
+    "vuetify": "^2.2.20",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.3",
     "@vue/cli-plugin-eslint": "^4.2.3",
     "@vue/cli-plugin-router": "^4.2.3",
-    "@vue/cli-plugin-vuex": "^4.2.3",
+    "@vue/cli-plugin-vuex": "^4.3.0",
     "@vue/cli-service": "^4.2.3",
     "@vue/eslint-config-standard": "^4.0.0",
     "animate.css": "^3.7.2",
